Fixed mobile navbar toggle wrapping when in open state.

--- a/css/fmm-theme.css
+++ b/css/fmm-theme.css
@@ -21,7 +21,7 @@ section { padding-top: 50px; padding-bottom: 50px;}
 #wrapper-navbar { -webkit-box-shadow: 0 8px 6px -6px #999; -moz-box-shadow: 0 8px 6px -6px #999; box-shadow: 0 8px 6px -6px #999; }
 @media (min-width: 1200px) {.navbar { max-width: 90%; margin: 0 auto; }}
 .navbar-expand-md .navbar-nav {margin-left: auto;}
-.navbar {flex-wrap: nowrap;}
+.navbar-brand {max-width: 75%;}
 /* Hero Section */
 .jumbotron {
     min-height: 600px;
